# dxvk-native

./: .gitignore  README.md  build-steamrt.sh  meson.build  package-native-steamrt.sh  package-native.sh  steamrt-build-debug.sh  steamrt-build.sh
include/native/directx/: README.md
include/native/windows/: unknwn.h  (+1 more)
src/d3d10/: d3d10_multithread.cpp
src/d3d11/: d3d11_context_imm.cpp  d3d11_context_imm.h  d3d11_device.cpp  d3d11_include.h  d3d11_options.cpp  d3d11_shader.cpp  d3d11_swapchain.cpp  d3d11_swapchain.h  d3d11_texture.cpp  meson.build
src/d3d9/: d3d9_adapter.cpp  d3d9_config.h  d3d9_device.cpp  d3d9_device.h  d3d9_fixed_function.cpp  d3d9_include.h  d3d9_monitor.cpp  d3d9_multithread.cpp  d3d9_options.cpp  d3d9_shader.cpp  d3d9_state.h  d3d9_surface.cpp  d3d9_swapchain.cpp  d3d9_swapchain.h  d3d9_util.h  meson.build
src/dxgi/: dxgi_adapter.cpp  dxgi_include.h  dxgi_monitor.cpp  dxgi_output.cpp  dxgi_swapchain.cpp
src/dxvk/: dxvk_context.cpp  dxvk_instance.cpp  dxvk_state_cache.cpp  dxvk_state_cache.h  meson.build
src/util/: meson.build  thread.h  util_bit.h  util_env.cpp  util_monitor.cpp  util_monitor.h  util_vector.h
src/vulkan/: vulkan_loader.h  vulkan_loader_fn.h  vulkan_presenter.cpp
src/wsi/: meson.build  wsi_monitor.h
src/wsi/glfw/: wsi_helpers_glfw.h  wsi_mode_glfw.cpp  wsi_monitor_glfw.cpp  wsi_presenter_glfw.cpp  wsi_window_glfw.cpp
src/wsi/sdl2/: wsi_helpers_sdl2.h  wsi_monitor_sdl2.cpp  wsi_presenter_sdl2.cpp
src/wsi/win32/: wsi_monitor_win32.cpp
tests/native/: meson.build  test_native_d3d11.cpp  test_native_d3d9.cpp
(+9 files in other folders)
